ajout scss et helpers

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&display=swap" rel="stylesheet">
@@ -9,55 +10,54 @@
 </head>
 <body>
 	<div class="main">
-		<div class="container navbar" id="navbar">
+		<div class="flex-row w-100 navbar" id="navbar">
 			<div class="homebtn"><a>SPECTRAL</a></div>
-			<div class="menudemoulant"></div>
+			<div class="menuderoulant"></div>
 		</div>
-		<div class="container section1">
+		<div class="flex-row w-100 accueil">
 			<div class="contain-titre">
-				<h1 class="titre doubleslignes centré">SPECTRAL</h1>
+				<h1 class="titre doubleslignes texte-centre">SPECTRAL</h1>
 				<p class="presentation">ANOTHER FINE RESPONSIVE SITE TEMPLATE FREEBIE CRAFTED BY HTML5 UP.</p>
 				<button class="btnprincipal"> ACTIVATE</button>
 			</div>
 		</div>
-		<div class="container section2" id="pointdaffichagenavbar">
+		<div class="flex-row w-100 couleur-prim" id="pointdaffichagenavbar">
 			<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 			<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 			<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-
-
 		</div>
-		<div class="container section3 sectionsimage">
-			<div class="image">
-				<img src="images/pic01.jpg">
+
+		<div class="flex-row w-100 couleur-sec">
+			<div class="w-40">
+				<img class="w-100" src="images/pic01.jpg">
 			</div>
-			<div class="contain-paragraphe">
-				<h2 class="titre titresparagraphe">MAGNA PRIMIS LOBORTISSED ULLAMCORPER</h2>
+			<div class="w-60">
+				<h2 class="titre w-80">MAGNA PRIMIS LOBORTISSED ULLAMCORPER</h2>
 				<p class="paragraphe">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 			</div>
 		</div>
-		<div class="container section4 sectionsimage">
-			<div class="image">
-				<img src="images/pic02.jpg">
+		<div class="flex-row-rev w-100 couleur-sec-teinte-interm">
+			<div class="w-40">
+				<img class="w-100" src="images/pic02.jpg">
 			</div>
-			<div class="contain-paragraphe">
-				<h2 class="titre titresparagraphe">TORTOR DOLORE FEUGIAT
+			<div class="w-60">
+				<h2 class="titre w-80">TORTOR DOLORE FEUGIAT
 					ELEMENTUM MAGNA</h2>
 				<p class="paragraphe">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 			</div>
 
 		</div>
-		<div class="container section5 sectionsimage">
-			<div class="image">
-				<img src="images/pic03.jpg">
+		<div class="flex-row w-100 couleur-sec-teinte-plus">
+			<div class="w-40">
+				<img class="w-100" src="images/pic03.jpg">
 			</div>
-			<div class="contain-paragraphe">
-				<h2 class="titre titresparagraphe">AUGUE ELEIFEND ALIQUET
+			<div class="w-60">
+				<h2 class="titre w-80">AUGUE ELEIFEND ALIQUET
 					SED CONDIMENTUM</h2>
 				<p class="paragraphe">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 			</div>
 		</div>
-		<div class="container section6">
+		<div class="flex-col w-100 couleur-tert">
 			<ul class="tableau-escobar">
 				<li class="element-tableau"><h3>ARCU ACCUMSAN</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
 				<li class="element-tableau"><h3>AC AUGUE EGET</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
@@ -68,12 +68,12 @@
 			</ul>
 
 		</div>
-		<div class="container learnmore">
-			<div class="container lecontainerdegauche"></div>
-			<div class="container lecontainerdedroite"><button class="btnprincipal"> ACTIVATE</button>				<button class="btnprincipal"> ACTIVATE</button></div>
+		<div class="flex-row w-100 learnmore">
+			<div class="flex-row w-100 leflex-row w-100degauche"></div>
+			<div class="flex-row w-100 leflex-row w-100dedroite"><button class="btnprincipal"> ACTIVATE</button>				<button class="btnprincipal"> ACTIVATE</button></div>
 
 		</div>
-		<div class="container">
+		<div class="flex-row w-100">
 
 		</div>
 	</div>
