--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;800&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5346e6abaa.js" crossorigin="anonymous"></script>
     <script src="navbar.js"></script>
 	<script src="menuVertical.js"></script>
@@ -94,26 +94,39 @@
 				Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.
 			</p>
 			<ul class="tableau-escobar margin-vert-10">
-				<li class="element-tableau"><span class="fa-solid fa-paper-plane"></span><h3>ARCU ACCUMSAN</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="fa-solid fa-laptop"></span><h3>AC AUGUE EGET</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="fa-solid fa-code"></span><h3>MUS SCELERISQUE</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="fa-solid fa-headphones-alt"></span><h3>MAURIS IMPERDIET</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="fa-solid fa-heart"></span><h3>AENEAN PRIMIS</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="fa-solid fa-flag"></span><h3>TORTOR UT</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau"><span class="icone-tableau fa-solid fa-paper-plane"></span><h3>ARCU ACCUMSAN</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau"><span class="icone-tableau fa-solid fa-laptop"></span><h3>AC AUGUE EGET</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau"><span class="icone-tableau fa-solid fa-code"></span><h3>MUS SCELERISQUE</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau"><span class="icone-tableau fa-solid fa-headphones-alt"></span><h3>MAURIS IMPERDIET</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau"><span class="icone-tableau fa-solid fa-heart"></span><h3>AENEAN PRIMIS</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau"><span class="icone-tableau fa-solid fa-flag"></span><h3>TORTOR UT</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
 			</ul>
 
 		</div>
-		<div class="flex-row w-100 learnmore">
-			<div class="flex-col w-60"></div>
-			<div class="flex-col w-40">
-				<button class="bouton margin-vert-10"> ACTIVATE</button>
-				<button class="bouton margin-vert-10 bouton-learn-more"> ACTIVATE</button>
+		<div class="conclusion  w-100">
+			<div class="contenu-conclusion flex-row w-100">
+				<div class="texte-conclusion flex-col w-65">
+					<h3 class=" w-80 margin-lat-10 margin-vert-0">ARCUE UT VEL COMMODO</h3>
+					<p class="paragraphe w-80 margin-lat-10">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+				</div>
+				<div class="boutons-conclusion flex-col w-35">
+					<button class="bouton bouton-conclusion margin-lat-35">ACTIVATE</button>
+					<button class="bouton bouton-conclusion margin-top-5  margin-lat-35 bouton-learn-more">LEARN MORE</button>
+				</div>
 			</div>
-
 		</div>
-		<div class="flex-row w-100">
-
-		</div>
+		<footer class="flex-col w-100 texte-centre">
+			<div class="liens-externes w-30 margin-lat-35 margin-top-10">
+				<span class="fa-brands fa-twitter"></span>
+				<span class="margin-lat-5 fa-brands fa-facebook-f"></span>
+				<span class="fa-brands fa-instagram"></span>
+				<span class="margin-lat-5 fa-brands fa-dribbble"></span>
+				<span class="fa-solid fa-envelope"></span>
+			</div>
+			<div class="credits margin-bot-10 margin-top-5">
+				<p>© UNTITLED | DESIGN: HTML5 UP | DEMO IMAGES: UNSPLASH</p>
+			</div>
+		</footer>
 	</div>
 
 </body>
