--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<!--CSS-->
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="helpers.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="style/css/helpers.css">
+	<link rel="stylesheet" type="text/css" href="style/css/style.css">
 
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,23 +14,22 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;800&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5346e6abaa.js" crossorigin="anonymous"></script>
-    <script src="navbar.js"></script>
-	<script src="menuVertical.js"></script>
+    <script src="script/navbar.js"></script>
+	<script src="script/menuVertical.js"></script>
 </head>
 <body>
-	<div onclick="menuVertical()" class="pointeur element-navbar top-right-fix">MENU<span class="fa-solid fa-bars"></span> </div>
-	<div class="couleur-prim top-right-fix w-0 h-100 transition-rapide-horiz premier-plan" id="navbar-laterale">
+	<div onclick="menuVertical()" class="pointer element-navbar top-right-fix"><span class="menu-label">MENU</span><span class="fa-solid fa-bars"></span> </div>
+	<div class="color-prim top-right-fix w-0 h-100 transition-rapide-horiz premier-plan" id="navbar-laterale">
 		<ul>
-			<li class="options-menu-lateral li-propres"><a class="liens-menu-lateral a-propres" href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Home</a></li>
-			<li class="options-menu-lateral li-propres"><a class="liens-menu-lateral a-propres"href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Generic</a></li>
-			<li class="options-menu-lateral li-propres"><a class="liens-menu-lateral a-propres"href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Elements</a></li>
-			<li class="options-menu-lateral li-propres"><a class="liens-menu-lateral a-propres"href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a></li>
-			<li class="options-menu-lateral li-propres "><a class="liens-menu-lateral a-propres"href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Log In</a></li>
+			<li class="options-menu-lateral li-clean"><a class="liens-menu-lateral a-clean" href="#">Home</a></li>
+			<li class="options-menu-lateral li-clean"><a class="liens-menu-lateral a-clean" href="#">Generic</a></li>
+			<li class="options-menu-lateral li-clean"><a class="liens-menu-lateral a-clean" href="#">Elements</a></li>
+			<li class="options-menu-lateral li-clean"><a class="liens-menu-lateral a-clean" href="#">Sign Up</a></li>
+			<li class="options-menu-lateral li-clean"><a class="liens-menu-lateral a-clean" href="#">Log In</a></li>
 		</ul>
 	</div>
 	<div class="main" id="le-main">
-
-		<div class="navbar flex-row w-100 h-0 couleur-sec-teinte-claire fix transition-rapide-vert overflow-hidden" id="navbar">
+		<div class="navbar flex-row w-100 h-0 color-sec-lighter fix transition-rapide-vert overflow-hidden" id="navbar">
 			<div class="element-navbar transition-rapide-horiz overflow-hidden" id="navbar-titre">	
 					SPECTRAL
 			</div>
@@ -44,30 +43,30 @@
 				<button class="bouton">ACTIVATE</button>
 			</div>
 		</div>
-		<div class="texte-centre flex-col w-100 couleur-prim" id="pointdaffichagenavbar">
-			<h2 class="margin-lat-25 margin-top-10 w-50">
+		<div class="texte-centre flex-col w-100 color-prim" id="pointdaffichagenavbar">
+			<h2 class="margin-lat-25 margin-top-10 w-50 rw-80 rmargin-lat-10">
 				ARCU ALIQUET VEL LOBORTIS ATA NISL EGET AUGUE AMET ALIQUET NISL CEP DONEC
 			</h2>
-			<p class="margin-lat-25 margin-vert-0 w-50">
+			<p class="margin-lat-25 margin-vert-0 w-50 rw-80 rmargin-lat-10 light-gray">
 				Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.
 			</p>
-			<ul class="flex-row affichage-icones w-50 margin-lat-25 margin-top-5 margin-bot-10 li-propres">
-				<li class="margin-lat-10"><div class="cadre-icone"><span class="fa-regular fa-gem icone couleur-icone-1"></span></div></li>
-				<li class="margin-lat-10"><div class="cadre-icone"><span class="fa-regular fa-heart icone couleur-icone-2"></span></div></li>
-				<li class="margin-lat-10"><div class="cadre-icone"><span class="fa-solid fa-code couleur-icone-3"></span></div></li>
+			<ul class="flex-row affichage-icons w-50 margin-lat-25 margin-top-5 margin-bot-10 li-clean">
+				<li class="margin-lat-10"><div class="cadre-icon"><span class="fa-regular fa-gem icon color-icon-1"></span></div></li>
+				<li class="margin-lat-10"><div class="cadre-icon"><span class="fa-regular fa-heart icon color-icon-2"></span></div></li>
+				<li class="margin-lat-10"><div class="cadre-icon"><span class="fa-solid fa-code color-icon-3"></span></div></li>
 			</ul>
 		</div>
 
-		<div class="flex-row w-100 couleur-sec section-demonstration">
+		<div class="flex-row w-100 color-sec section-demonstration">
 			<div class="w-40 div-demonstration">
 				<img class="w-100" src="images/pic01.jpg">
 			</div>
 			<div class="w-60 div-demonstration">
 				<h3 class="titre-demonstration w-60 margin-lat-10 margin-top-15">MAGNA PRIMIS LOBORTIS SED ULLAMCORPER</h3>
-				<p class="paragraphe w-80 margin-lat-10">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+				<p class="paragraphe w-80 margin-lat-10 ">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 			</div>
 		</div>
-		<div class="flex-row-rev w-100 couleur-sec-teinte-interm section-demonstration">
+		<div class="flex-row-rev w-100 color-sec-slightly-darker section-demonstration">
 			<div class="w-40 div-demonstration">
 				<img class="w-100" src="images/pic02.jpg">
 			</div>
@@ -77,7 +76,7 @@
 			</div>
 
 		</div>
-		<div class="flex-row w-100 couleur-sec-teinte-plus section-demonstration">
+		<div class="flex-row w-100 color-sec-darker section-demonstration">
 			<div class="w-40 div-demonstration">
 				<img class="w-100" src="images/pic03.jpg">
 			</div>
@@ -86,32 +85,31 @@
 				<p class="paragraphe w-80 margin-lat-10">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 			</div>
 		</div>
-		<div class="flex-col w-100 couleur-tert">
-			<h2 class="texte-centre margin-lat-25 margin-top-10 w-50">
-				ARCU ALIQUET VEL LOBORTIS ATA NISL EGET AUGUE AMET ALIQUET NISL CEP DONEC
+		<div class="flex-col w-100 color-tert">
+			<h2 class="texte-centre margin-lat-25 margin-top-10 w-50 rw-80 rmargin-lat-10">
+				ACCUMSAN MUS TORTOR NUNC ALIQUET
 			</h2>
-			<p class="texte-centre margin-lat-25 margin-vert-0 w-50">
+			<p class="texte-centre light-gray margin-lat-25 margin-vert-0 w-50 rw-80 rmargin-lat-10">
 				Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.
 			</p>
-			<ul class="tableau-escobar margin-vert-10">
-				<li class="element-tableau"><span class="icone-tableau fa-solid fa-paper-plane"></span><h3>ARCU ACCUMSAN</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="icone-tableau fa-solid fa-laptop"></span><h3>AC AUGUE EGET</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="icone-tableau fa-solid fa-code"></span><h3>MUS SCELERISQUE</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="icone-tableau fa-solid fa-headphones-alt"></span><h3>MAURIS IMPERDIET</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="icone-tableau fa-solid fa-heart"></span><h3>AENEAN PRIMIS</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau"><span class="icone-tableau fa-solid fa-flag"></span><h3>TORTOR UT</h3><p class="paragraphe-tableau">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+			<ul class="tableau-escobar overflow-hidden flex-wrap w-80 h-80 margin-lat-10 margin-vert-10">
+				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-paper-plane"></span><h3>ARCU ACCUMSAN</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-laptop"></span><h3>AC AUGUE EGET</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-code"></span><h3>MUS SCELERISQUE</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-headphones-alt"></span><h3>MAURIS IMPERDIET</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-heart"></span><h3>AENEAN PRIMIS</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-flag"></span><h3>TORTOR UT</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
 			</ul>
-
 		</div>
 		<div class="conclusion  w-100">
 			<div class="contenu-conclusion flex-row w-100">
 				<div class="texte-conclusion flex-col w-65">
 					<h3 class=" w-80 margin-lat-10 margin-vert-0">ARCUE UT VEL COMMODO</h3>
-					<p class="paragraphe w-80 margin-lat-10">Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+					<p class="paragraphe w-80 margin-lat-10">Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 				</div>
-				<div class="boutons-conclusion flex-col w-35">
-					<button class="bouton bouton-conclusion margin-lat-35">ACTIVATE</button>
-					<button class="bouton bouton-conclusion margin-top-5  margin-lat-35 bouton-learn-more">LEARN MORE</button>
+				<div class="flex-col w-35 rw-100">
+					<button class="bouton rmargin-lat-10 margin-lat-35">ACTIVATE</button>
+					<button class="bouton  margin-top-5  margin-lat-35 rmargin-lat-10 bouton-learn-more">LEARN MORE</button>
 				</div>
 			</div>
 		</div>
