changement nom des classes2

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 			<p class="texte-centre light-gray margin-lat-25 margin-vert-0 w-50 rw-80 rmargin-lat-10">
 				Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.
 			</p>
-			<ul class="tableau-escobar overflow-hidden flex-wrap w-80 h-80 margin-lat-10 margin-vert-10">
-				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-paper-plane"></span><h3>ARCU ACCUMSAN</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-laptop"></span><h3>AC AUGUE EGET</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-code"></span><h3>MUS SCELERISQUE</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-headphones-alt"></span><h3>MAURIS IMPERDIET</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-heart"></span><h3>AENEAN PRIMIS</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
-				<li class="element-tableau w-30 rw-100"><span class="icon-tableau fa-solid fa-flag"></span><h3>TORTOR UT</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+			<ul class="table overflow-hidden flex-wrap w-80 h-80 margin-lat-10 margin-vert-10">
+				<li class="element-table w-30 rw-100"><span class="icon-table fa-solid fa-paper-plane"></span><h3>ARCU ACCUMSAN</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-table w-30 rw-100"><span class="icon-table fa-solid fa-laptop"></span><h3>AC AUGUE EGET</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-table w-30 rw-100"><span class="icon-table fa-solid fa-code"></span><h3>MUS SCELERISQUE</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-table w-30 rw-100"><span class="icon-table fa-solid fa-headphones-alt"></span><h3>MAURIS IMPERDIET</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-table w-30 rw-100"><span class="icon-table fa-solid fa-heart"></span><h3>AENEAN PRIMIS</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
+				<li class="element-table w-30 rw-100"><span class="icon-table fa-solid fa-flag"></span><h3>TORTOR UT</h3><p class="light-gray">Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p></li>
 			</ul>
 		</div>
 		<div class="conclusion  w-100">
